# rstr-client

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: dependaboy.yml
.github/workflows/: release.yml  release1.yml
docs/source/: client.rst  conf.py  exceptions.rst  index.rst  models.rst
rstr/: __init__.py  client.py  exceptions.py  models.py
rustore/: __init__.py  client.py  models.py
rustore_client/: client.py  models.py
