[tool.poetry]
name = "rustore-client"
version = "0.1.0"
description = "A client for the rustore blob-store."
authors = ["Giuseppe Papallo <giuseppe@papallo.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pytest = "^6.2.4"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "^2.13.0"
mypy = "^0.902"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
