[tool.poetry]
name = "rstr-client"
version = "0.1.0"
description = "A client for the rstr blob-store."
authors = ["Giuseppe Papallo <giuseppe@papallo.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pytest = "^6.2.4"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "^2.13.0"
mypy = "^0.902"
Sphinx = "^4.0.2"
ipython = "^7.24.1"
types-requests = "^2.26.2"
pydocstyle = "^6.1.1"

[tool.pydocstyle]
convention = "google"
add-ignore = "D105,D104,D101,D100"

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
